src/app/item/components/item-list/item-list.component.scss
@use 'sass:map';
@use '@angular/material' as mat;
@import '../../../../styles.scss';

$color-config:    mat.get-color-config($chr-theme);
$primary-palette: map.get($color-config, 'primary');
$accent-palette: map.get($color-config, 'accent');

.text-primary{
  color: mat.get-color-from-palette($primary-palette);
}

thead {
  background-color: mat.get-color-from-palette($accent-palette, A200);
}

  @media (min-width: 640px) {
    table {
      display: inline-table !important;
    }

    thead tr:not(:first-child) {
      display: none;
    }
    td:not(:last-child) {
      border-bottom: 0;
    }
    th{
      border-bottom: 2px solid rgba(0, 0, 0, .1);
    }
  }

td:not(:last-child) {
  border-bottom: 0;
}

th:is(:last-child){
  border-bottom: 2px solid rgba(0, 0, 0, .1);
}

